<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@color/backgroud_app">

    <ImageView
        android:id="@+id/ivImageIcon"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/lexend_regular"
        android:gravity="center"
        android:text="@string/sign_in_text_presentation"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImageIcon" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEmail"
        android:layout_width="320dp"
        android:layout_height="62dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/background_log_in_fields"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="10dp"
            android:fontFamily="@font/lexend_regular"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColorHint="@color/hint_text"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvUsername"
        android:layout_width="320dp"
        android:layout_height="62dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="16dp"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvEmail"
        app:cardBackgroundColor="@color/background_log_in_fields">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/face_24px"
            android:drawablePadding="10dp"
            android:fontFamily="@font/lexend_regular"
            android:hint="@string/username_hint"
            android:inputType="textNoSuggestions"
            android:padding="16dp"
            android:textColorHint="@color/hint_text"
            android:textSize="16sp"
            android:background="@android:color/transparent"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPassword"
        android:layout_width="320dp"
        android:layout_height="62dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="16dp"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvUsername"
        app:cardBackgroundColor="@color/background_log_in_fields">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_log_in_fields"
            android:drawableStart="@drawable/lock_24px"
            android:drawablePadding="10dp"
            android:fontFamily="@font/lexend_regular"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColorHint="@color/hint_text"
            android:textSize="16sp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvRepeatPassword"
        android:layout_width="320dp"
        android:layout_height="62dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="16dp"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvPassword"
        app:cardBackgroundColor="@color/background_log_in_fields">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_log_in_fields"
            android:drawableStart="@drawable/lock_24px"
            android:drawablePadding="10dp"
            android:fontFamily="@font/lexend_regular"
            android:hint="@string/repeat_password_text"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColorHint="@color/hint_text"
            android:textSize="16sp"/>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="320dp"
        android:layout_height="62dp"
        android:layout_marginTop="30dp"
        android:textSize="16dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:backgroundTint="@color/log_in_btn"
        android:fontFamily="@font/lexend_regular"
        android:text="@string/sign_in_button_text"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvRepeatPassword" />

    <TextView
        android:id="@+id/tvLogInBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lexend_regular"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="32dp"
        android:text="@string/log_in_back"
        android:textColor="@color/log_in_btn"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>
